# karuneegar_central

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  docker-compose.yml  main.py  railway.json  requirements.txt  start.bat
backend/: email_otp.py  entrypoint.sh  main.py  migrate.py  models.py  pyproject.toml  requirements.txt  sms.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Footer.tsx  KarunegarLogo.tsx  Navbar.tsx  PhoneInput.tsx  ProtectedPhoto.tsx  VisibilityPrompt.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/i18n/: en.json  index.ts  kn.json  ta.json  te.json
frontend/src/pages/: AboutKaruneegar.tsx  BusinessProfileView.tsx  Businesses.tsx  EditBusiness.tsx  EditProfile.tsx  FamilyTree.tsx  ForumCategory.tsx  ForumThread.tsx  Forums.tsx  Home.tsx  Login.tsx  Matrimony.tsx  MatrimonyCreate.tsx  MatrimonyView.tsx  Members.tsx  Profile.tsx  Register.tsx  Scholarship.tsx
instance/: karuneegar.db
